<resources>
    <string name="app_name">GymRat</string>
    <string name="this_will_be_our_login_page">This will be our Login Page</string>
    <string name="log_in">log in</string>
    <string name="account_login">Account Login</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Re-enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registration">Registration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="routine_name_label">Routine:</string>

    <string name="workout_dir">Workout Directory</string>
    <string name="workout_menu">Workout Menu</string>
    <string name="next_rec_workout">Next Recomended Workout</string>
    <string name="workout_summary">Workout Summary</string>
    <string name="ses_history">Session History</string>
    <string name="routines">Routines</string>
    <string name="bday">Birthday</string>
    <string name="height">Height</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_equipment_guide">EquipmentGuide</string>
</resources>